@@ -3,10 +3,7 @@ package uk.gov.hmcts.reform.pcs.ccd.page.resumepossessionclaim;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import uk.gov.hmcts.ccd.sdk.api.CaseDetails;
-import uk.gov.hmcts.ccd.sdk.api.Event;
 import uk.gov.hmcts.ccd.sdk.api.callback.AboutToStartOrSubmitResponse;
-import uk.gov.hmcts.ccd.sdk.api.callback.MidEvent;
-import uk.gov.hmcts.reform.pcs.ccd.accesscontrol.UserRole;
 import uk.gov.hmcts.reform.pcs.ccd.domain.DiscretionaryGround;
 import uk.gov.hmcts.reform.pcs.ccd.domain.MandatoryGround;
 import uk.gov.hmcts.reform.pcs.ccd.domain.PCSCase;
@@ -16,32 +13,29 @@ import uk.gov.hmcts.reform.pcs.ccd.page.BasePageTest;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static uk.gov.hmcts.ccd.sdk.type.YesOrNo.YES;
 
 class GroundForPossessionRentArrearsTest extends BasePageTest {
 
-    private Event<PCSCase, UserRole, State> event;
 
     @BeforeEach
     void setUp() {
-        event = buildPageInTestEvent(new GroundForPossessionRentArrears());
+        setPageUnderTest(new GroundForPossessionRentArrears());
     }
 
     @Test
     void shouldAutoPopulateMandatoryGroundsWhenSeriousRentArrearsGround8IsSelected() {
         // Given
-        CaseDetails<PCSCase, State> caseDetails = new CaseDetails<>();
         PCSCase caseData = PCSCase.builder()
-            .rentArrearsGrounds(Arrays.asList(RentArrearsGround.SERIOUS_RENT_ARREARS_GROUND8))
+            .rentArrearsGrounds(List.of(RentArrearsGround.SERIOUS_RENT_ARREARS_GROUND8))
             .hasOtherAdditionalGrounds(YES)
             .build();
-        caseDetails.setData(caseData);
 
         // When
-        MidEvent<PCSCase, State> midEvent = getMidEventForPage(event, "groundForPossessionRentArrears");
-        AboutToStartOrSubmitResponse<PCSCase, State> response = midEvent.handle(caseDetails, null);
+        AboutToStartOrSubmitResponse<PCSCase, State> response = callMidEventHandler(caseData);
 
         // Then
         assertThat(response.getData().getMandatoryGrounds())
@@ -52,16 +46,13 @@ class GroundForPossessionRentArrearsTest extends BasePageTest {
     @Test
     void shouldAutoPopulateDiscretionaryGroundsWhenRentArrearsGround10IsSelected() {
         // Given
-        CaseDetails<PCSCase, State> caseDetails = new CaseDetails<>();
         PCSCase caseData = PCSCase.builder()
-            .rentArrearsGrounds(Arrays.asList(RentArrearsGround.RENT_ARREARS_GROUND10))
+            .rentArrearsGrounds(List.of(RentArrearsGround.RENT_ARREARS_GROUND10))
             .hasOtherAdditionalGrounds(YES)
             .build();
-        caseDetails.setData(caseData);
 
         // When
-        MidEvent<PCSCase, State> midEvent = getMidEventForPage(event, "groundForPossessionRentArrears");
-        AboutToStartOrSubmitResponse<PCSCase, State> response = midEvent.handle(caseDetails, null);
+        AboutToStartOrSubmitResponse<PCSCase, State> response = callMidEventHandler(caseData);
 
         // Then
         assertThat(response.getData().getDiscretionaryGrounds())
@@ -72,16 +63,13 @@ class GroundForPossessionRentArrearsTest extends BasePageTest {
     @Test
     void shouldAutoPopulateDiscretionaryGroundsWhenPersistentDelayGround11IsSelected() {
         // Given
-        CaseDetails<PCSCase, State> caseDetails = new CaseDetails<>();
         PCSCase caseData = PCSCase.builder()
-            .rentArrearsGrounds(Arrays.asList(RentArrearsGround.PERSISTENT_DELAY_GROUND11))
+            .rentArrearsGrounds(List.of(RentArrearsGround.PERSISTENT_DELAY_GROUND11))
             .hasOtherAdditionalGrounds(YES)
             .build();
-        caseDetails.setData(caseData);
 
         // When
-        MidEvent<PCSCase, State> midEvent = getMidEventForPage(event, "groundForPossessionRentArrears");
-        AboutToStartOrSubmitResponse<PCSCase, State> response = midEvent.handle(caseDetails, null);
+        AboutToStartOrSubmitResponse<PCSCase, State> response = callMidEventHandler(caseData);
 
         // Then
         assertThat(response.getData().getDiscretionaryGrounds())
@@ -92,7 +80,6 @@ class GroundForPossessionRentArrearsTest extends BasePageTest {
     @Test
     void shouldAutoPopulateBothMandatoryAndDiscretionaryGroundsWhenMultipleGroundsAreSelected() {
         // Given
-        CaseDetails<PCSCase, State> caseDetails = new CaseDetails<>();
         PCSCase caseData = PCSCase.builder()
             .rentArrearsGrounds(Arrays.asList(
                 RentArrearsGround.SERIOUS_RENT_ARREARS_GROUND8,
@@ -101,11 +88,9 @@ class GroundForPossessionRentArrearsTest extends BasePageTest {
             ))
             .hasOtherAdditionalGrounds(YES)
             .build();
-        caseDetails.setData(caseData);
 
         // When
-        MidEvent<PCSCase, State> midEvent = getMidEventForPage(event, "groundForPossessionRentArrears");
-        AboutToStartOrSubmitResponse<PCSCase, State> response = midEvent.handle(caseDetails, null);
+        AboutToStartOrSubmitResponse<PCSCase, State> response = callMidEventHandler(caseData);
 
         // Then
         assertThat(response.getData().getMandatoryGrounds())
@@ -120,18 +105,15 @@ class GroundForPossessionRentArrearsTest extends BasePageTest {
     @Test
     void shouldNotAddDuplicateGroundsWhenGroundsAlreadyExist() {
         // Given
-        CaseDetails<PCSCase, State> caseDetails = new CaseDetails<>();
         PCSCase caseData = PCSCase.builder()
-            .rentArrearsGrounds(Arrays.asList(RentArrearsGround.SERIOUS_RENT_ARREARS_GROUND8))
-            .mandatoryGrounds(Arrays.asList(MandatoryGround.SERIOUS_RENT_ARREARS_GROUND8))
-            .discretionaryGrounds(Arrays.asList(DiscretionaryGround.RENT_ARREARS_GROUND10))
+            .rentArrearsGrounds(List.of(RentArrearsGround.SERIOUS_RENT_ARREARS_GROUND8))
+            .mandatoryGrounds(List.of(MandatoryGround.SERIOUS_RENT_ARREARS_GROUND8))
+            .discretionaryGrounds(List.of(DiscretionaryGround.RENT_ARREARS_GROUND10))
             .hasOtherAdditionalGrounds(YES)
             .build();
-        caseDetails.setData(caseData);
 
         // When
-        MidEvent<PCSCase, State> midEvent = getMidEventForPage(event, "groundForPossessionRentArrears");
-        AboutToStartOrSubmitResponse<PCSCase, State> response = midEvent.handle(caseDetails, null);
+        AboutToStartOrSubmitResponse<PCSCase, State> response = callMidEventHandler(caseData);
 
         // Then
         assertThat(response.getData().getMandatoryGrounds())
@@ -143,16 +125,13 @@ class GroundForPossessionRentArrearsTest extends BasePageTest {
     @Test
     void shouldNotAutoPopulateWhenNoRentArrearsGroundsAreSelected() {
         // Given
-        CaseDetails<PCSCase, State> caseDetails = new CaseDetails<>();
         PCSCase caseData = PCSCase.builder()
             .rentArrearsGrounds(Collections.emptyList())
             .hasOtherAdditionalGrounds(YES)
             .build();
-        caseDetails.setData(caseData);
 
         // When
-        MidEvent<PCSCase, State> midEvent = getMidEventForPage(event, "groundForPossessionRentArrears");
-        AboutToStartOrSubmitResponse<PCSCase, State> response = midEvent.handle(caseDetails, null);
+        AboutToStartOrSubmitResponse<PCSCase, State> response = callMidEventHandler(caseData);
 
         // Then
         assertThat(response.getData().getMandatoryGrounds()).isEmpty();
@@ -162,16 +141,13 @@ class GroundForPossessionRentArrearsTest extends BasePageTest {
     @Test
     void shouldNotAutoPopulateWhenRentArrearsGroundsIsNull() {
         // Given
-        CaseDetails<PCSCase, State> caseDetails = new CaseDetails<>();
         PCSCase caseData = PCSCase.builder()
             .rentArrearsGrounds(null)
             .hasOtherAdditionalGrounds(YES)
             .build();
-        caseDetails.setData(caseData);
 
         // When
-        MidEvent<PCSCase, State> midEvent = getMidEventForPage(event, "groundForPossessionRentArrears");
-        AboutToStartOrSubmitResponse<PCSCase, State> response = midEvent.handle(caseDetails, null);
+        AboutToStartOrSubmitResponse<PCSCase, State> response = callMidEventHandler(caseData);
 
         // Then
         assertThat(response.getData().getMandatoryGrounds()).isEmpty();
@@ -183,7 +159,7 @@ class GroundForPossessionRentArrearsTest extends BasePageTest {
         // Given
         CaseDetails<PCSCase, State> caseDetails = new CaseDetails<>();
         PCSCase caseData = PCSCase.builder()
-            .rentArrearsGrounds(Arrays.asList(RentArrearsGround.SERIOUS_RENT_ARREARS_GROUND8))
+            .rentArrearsGrounds(List.of(RentArrearsGround.SERIOUS_RENT_ARREARS_GROUND8))
             .mandatoryGrounds(null)
             .discretionaryGrounds(null)
             .hasOtherAdditionalGrounds(YES)
@@ -191,8 +167,7 @@ class GroundForPossessionRentArrearsTest extends BasePageTest {
         caseDetails.setData(caseData);
 
         // When
-        MidEvent<PCSCase, State> midEvent = getMidEventForPage(event, "groundForPossessionRentArrears");
-        AboutToStartOrSubmitResponse<PCSCase, State> response = midEvent.handle(caseDetails, null);
+        AboutToStartOrSubmitResponse<PCSCase, State> response = callMidEventHandler(caseData);
 
         // Then
         assertThat(response.getData().getMandatoryGrounds())
